// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`properly renders every field item 1`] = `
<div>
  test_field_1 element
</div>
`;

exports[`properly renders every field item 2`] = `
<div>
  test_field_2 element
</div>
`;

exports[`properly renders every field item 3`] = `
<div>
  test_field_3 element
</div>
`;
